fixed gap bug

--- a/BlackRidge.css
+++ b/BlackRidge.css
@@ -13,7 +13,7 @@
     #headerNav {
         display: flex; 
         justify-content: space-between;
-        gap: 10px;
+
         align-items: center; 
         padding: 30px; 
         position: relative; 
